ndb - blob tables vs dict cache : patch 2 -  bug#17761 (maybe)